<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:minHeight="@dimen/min_height"
                android:minWidth="@dimen/min_height"
                android:padding="@dimen/padding_default"
                android:text="@string/apply"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:minHeight="@dimen/min_height"
                android:minWidth="@dimen/min_height"
                android:padding="@dimen/padding_default"
                android:text="@string/cancel"
                android:textColor="@color/blue" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_avar"
            android:layout_width="@dimen/app_img_size_detail"
            android:layout_height="@dimen/app_img_size_detail"
            android:layout_gravity="center"
            android:src="@drawable/image_placeholder_500x500" />

        <TextView
            android:id="@+id/tv_apk_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableRight="@drawable/ic_expand_more"
            android:padding="@dimen/padding_default"
            android:text="@string/apk_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_big" />

        <LinearLayout
            android:id="@+id/view_apk_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shadow"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_default"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:padding="@dimen/padding_small"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/des"
                android:padding="@dimen/padding_small"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_cate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/title_category"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_big" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/padding_small">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_list_cate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/your_policy"
                android:padding="@dimen/padding_small"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:padding="@dimen/padding_small"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_require"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/android_require"
                android:padding="@dimen/padding_small"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_big" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/padding_small">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_list_require"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:minHeight="@dimen/min_height"
                android:minWidth="@dimen/min_height"
                android:padding="@dimen/padding_default"
                android:text="@string/save"
                android:textColor="@color/blue" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/padding_default"
            android:text="@string/apk_status"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_big" />

        <TextView
            android:id="@+id/tv_status_apk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/pending"
            android:textAllCaps="true"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/tv_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_default"
            android:text="@string/pending_direction"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_public_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_shadow"
            android:minHeight="@dimen/min_height"
            android:minWidth="@dimen/min_height"
            android:padding="@dimen/padding_super_big"
            android:text="@string/public_app"
            android:textColor="@color/blue"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_update_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_shadow"
            android:minHeight="@dimen/min_height"
            android:minWidth="@dimen/min_height"
            android:padding="@dimen/padding_super_big"
            android:text="@string/update_app"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_shadow"
            android:minHeight="@dimen/min_height"
            android:minWidth="@dimen/min_height"
            android:padding="@dimen/padding_super_big"
            android:text="@string/pending"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:visibility="gone"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_below="@id/relate_frame"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/gray_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/authen"
            android:textColor="@color/gray_detail"
            android:textSize="@dimen/text_size_tiny" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>